[project]
name = "test-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "cicdsamuel",email = "aws.sgaravito@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nose (>=1.3.7,<2.0.0)",
    "pinocchio (>=0.4.3,<0.5.0)",
    "coverage (>=7.7.1,<8.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
